factory, limites e testes
adicionada factory baseada no .env criado os cenarios de testes e release

--- a/.env
+++ b/.env
@@ -1,14 +1,20 @@
 # Endereço do Redis
 REDIS_ADDR=redis:6379
 
+# Porta do WebServer
+SERVER_PORT=8080
+
 # Tipo de estratégia de armazenamento (memory ou redis)
-RATE_LIMIT_STRATEGY=memory
+RATE_LIMIT_STRATEGY=redis
 
-# Limite de requisições por segundo por IP
-RATE_LIMIT_IP=10
+# Duracao do Limite em milissegundos
+RATE_LIMIT_DURATION=1000
 
-# Limite de requisições por segundo por Token
-RATE_LIMIT_TOKEN=100
+# Limite de requisições por tempo por IP
+RATE_LIMIT_IP=5
+
+# Limite de requisições por tempo por Token
+RATE_LIMIT_TOKEN=10
 
 # Tempo de bloqueio em segundos
-BLOCK_TIME=300
+BLOCK_TIME=120
